--- a/frontend/src/components/topic_page/detail/Detail.css
+++ b/frontend/src/components/topic_page/detail/Detail.css
@@ -11,35 +11,35 @@
  
 .mid {
     background-color: var(--color-bg-main);
-    padding:5% 15%;
+    padding:5% 5%;
 }
  
 .bot {
-    padding: 5% 15%;
+    padding: 5% 12%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
 }
- 
+
+
 .fr {
     display: block;
 }
  
 
-.vid {
-    position: relative;
-    min-width: 475px;
-    min-height: 315px;
-    height: 0;
-}
 
 
-.vid iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    max-width: 100%;
-    max-height: 100%;
-    width: 100%;
-    height: 100%;
+@media only screen and (min-width: 768px) {
+    .vid iframe {
+        width: 100%;
+        height: 100%;
+    }
 }
+
+@media only screen and (max-width: 576px) {
+    .vid iframe {
+        width: 200px;
+        height: 200px;
+        margin-right: 80px;
+    }
+}
+
